# xds-downloader

./: .dockerIgnore  .gitignore  Dockerfile  README.md  build-deploy-image.sh  xds-downloader.cabal
deploy/: Dockerfile
src/: Download.hs  Main.hs  Notify.hs  Queue.hs  S3.hs  SNS.hs  SQS.hs  Types.hs  Util.hs  xds-downloader.hs
src/Xds/Amazonka/: SNS.hs
src/Xds/Aws/: S3.hs  SQS.hs
src/Xds/Downloader/: Download.hs  Notify.hs  Queue.hs  Types.hs  Util.hs
