name:                xds-downloader
version:             0.1.0.0
description:         Dataset processor for xdataset
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable xds-downloader
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    
    -static 
    -Wall
    -Werror
    -threaded 
    -O2
    -rtsopts
    "-with-rtsopts=-N"

  buildable: True
  build-depends:
      base
    , text
    , transformers
    , mtl >= 2.2.1
    , aeson >= 0.9.0.1 && < 0.10
    , bytestring
    , containers
    , conduit
    , http-conduit
    , conduit-extra
    , resourcet
    , http-streams
    , amazonka >= 1.3.1
    , amazonka-core >= 1.3.1
    , amazonka-sns >= 1.3.1
    , http-types
    , lens
    , aws >= 0.12.1 && < 0.13
    , monad-loops
    , errors
    , connection
    , http-client
    , exceptions
    , monad-logger
    , xds-aws



